--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hello Flask</title>
 </head>
 <body>
+
     <nav>
         <ul>
             <li><a href="{{ url_for('index') }}">Home</a></li>
@@ -15,6 +16,7 @@
         </ul>
     </nav>
 
-    <h1>Contact Page</h1>
+    <h1>Contact Us</h1>
+
 </body>
 </html>
