--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,217 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>About Page</h1>
+    <h2>About Page</h2>
+
+    <p>
+        The formation of the group grew out of a meeting Gandalf had with Thorin in Bree which kindled Thorin's interest
+        in recapturing his long lost family inheritance. (Thorin's grandfather had been the king of the Lonely Mountain
+        when Smaug came and took it.) Remembering that he had once known an adventurous Hobbit on his travels in the
+        Shire, Gandalf decided to add Bilbo to their company because he knew that stealth and cunning were preferable to
+        force. Gandalf also believed that someone like Bilbo could keep the sometimes prideful and stubborn Dwarves from
+        rash action. The superstitious Dwarves also considered thirteen to be an unlucky number, and as Gandalf had
+        planned to leave on other business, welcomed a fourteenth to fill into their party.
+    </p>
+
+    <div class="row featurette">
+        <div class="col-md-7">
+            <h3>Thorin II Oakenshield</h3>
+            <p>
+                Thorin II was born in TA 2746 to Dwarf prince Thráin II in the city of the Lonely Mountain. Early in his
+                youth, he and the other Dwarves of the Lonely Mountain were forced to flee by the dragon Smaug in TA
+                2770. While in exile, he quickly grew to become a capable warrior. This was demonstrated when he
+                participated in the Battle of Azanulbizar in TA 2799. He fought with one of the Dwarven armies beneath
+                the East-gate of Moria. At some point in the fighting, his shield broke, and using an oaken tree branch
+                found on the ground as a shield, he gained the epithet "Oakenshield," which would remain with him even
+                in death.
+            </p>
+        </div>
+        <div class="col-md-5">
+            <img src="https://static.wikia.nocookie.net/lotr/images/3/3f/ThorinBIG.jpg" alt="thoring">
+        </div>
+    </div>
+
+    <div class="row featurette">
+        <div class="col-md-5">
+            <img src="https://static.wikia.nocookie.net/lotr/images/b/b4/The-Hobbit-Fili-and-Kili.jpg" alt="">
+        </div>
+        <div class="col-md-7">
+            <h3>Fili and Kili</h3>
+            <p>
+                Fíli and Kíli were nephews of Thorin, who was the elder brother of their mother Dís. They were also nephews
+                of Frerin, grandsons of Thráin II, and great-grandsons of Thrór. Fíli's most distinguishing feature was his
+                long nose, the longest of any of the Dwarves in Thorin's company.
+            </p>
+        </div>
+    </div>
+
+    <div class="row featurette">
+        <div class="col-md-7">
+            <h3>Óin</h3>
+            <p>
+                Óin was the older brother of Glóin, cousin of Dwalin and Balin, and uncle of Gimli. Óin's uncle was
+                Fundin, the father of Balin and Dwalin. He usually wore a brown-hooded cloak when travelling. Óin fought
+                in the Battle of Azanulbizar along with Thorin Oakenshield, and in TA 2941 joined with Thorin and
+                Company on the quest to reclaim the Lonely Mountain wearing a brown hood.[2] Óin was one of the Dwarves
+                who bet that Bilbo would come along with them to reclaim the Lonely Mountain. Óin and his brother Glóin
+                were usually in charge of preparing the fire for the Company as they were the most skilled out of the
+                others. He fought in and survived the Battle of Five Armies, and later settled in the Lonely Mountain
+                with King Dáin II Ironfoot, along with many other Dwarves of The Company of Thorin.
+            </p>
+        </div>
+        <div class="col-md-5">
+            <img src="https://static.wikia.nocookie.net/lotr/images/e/e8/Oin.jpg" alt="Óin">
+        </div>
+    </div>
+
+    <div class="row featurette">
+        <div class="col-md-5">
+            <img src="https://static.wikia.nocookie.net/lotr/images/f/fc/Gloin_2.jpg" alt="Gloin">
+        </div>
+        <div class="col-md-7">
+            <h3>Gloin</h3>
+            <p>
+                Glóin was born in TA 2783, after the dragon Smaug desolated Erebor. He was the younger child of Gróin
+                and younger brother of Óin.
+            </p>
+        </div>
+    </div>
+
+    <div class="row featurette">
+        <div class="col-md-7">
+            <h3>Balin</h3>
+            <p>
+                Balin was a Dwarf leader, the son of Fundin, and elder brother of Dwalin. He was one of the thirteen
+                Dwarves who accompanied Thorin II Oakenshield on the quest to regain the Lonely Mountain.
+            </p>
+        </div>
+        <div class="col-md-5">
+            <img src="https://static.wikia.nocookie.net/lotr/images/5/52/Balin.jpg" alt="Balin">
+        </div>
+    </div>
+
+    <div class="row featurette">
+        <div class="col-md-5">
+            <img src="https://static.wikia.nocookie.net/lotr/images/1/1c/Dwalin.jpg" alt="Dwalin">
+        </div>
+        <div class="col-md-7">
+            <h3>Dwalin</h3>
+            <p>
+                Dwalin was one of the Dwarves who traveled with Bilbo and Gandalf as a member of Thorin and Company on
+                the quest to regain the Lonely Mountain from the Dragon Smaug. He was the brother of Balin and the
+                youngest son of Fundin.
+            </p>
+        </div>
+    </div>
+
+    <div class="row featurette">
+        <div class="col-md-7">
+            <h3>Ori</h3>
+            <p>
+                Ori was a member of Thorin's Company of Dwarves and participated in the Quest of Erebor, as well as
+                fighting in and surviving the Battle of Five Armies. He, along with his cousins Dori and Nori,[2] were
+                remote kinsmen of Thorin II Oakenshield.
+            </p>
+        </div>
+        <div class="col-md-5">
+            <img src="https://static.wikia.nocookie.net/lotr/images/8/81/Ori.jpeg" alt="Ori">
+        </div>
+    </div>
+
+    <div class="row featurette">
+        <div class="col-md-5">
+            <img src="https://static.wikia.nocookie.net/lotr/images/8/89/Dori-markhadlow-p.jpg" alt="Dori">
+        </div>
+        <div class="col-md-7">
+            <h3>Dori</h3>
+            <p>
+                Dori was a Dwarf of Durin's Folk, who, along with his brother Nori and cousin Ori,[1] travelled with
+                Bilbo Baggins and Thorin Oakenshield as a member of Thorin's Company on the Quest for Erebor, to reclaim
+                the Lonely Mountain from the dragon Smaug.
+            </p>
+        </div>
+    </div>
+
+    <div class="row featurette">
+        <div class="col-md-7">
+            <h3>Nori</h3>
+            <p>
+
+            </p>
+        </div>
+        <div class="col-md-5">
+            <img src="" alt="Nori">
+        </div>
+    </div>
+
+    <div class="row featurette">
+        <div class="col-md-5">
+            <img src="" alt="Bifur">
+        </div>
+        <div class="col-md-7">
+            <h3>Bifur</h3>
+            <p>
+
+            </p>
+        </div>
+    </div>
+
+    <div class="row featurette">
+        <div class="col-md-7">
+            <h3>Nori</h3>
+            <p>
+
+            </p>
+        </div>
+        <div class="col-md-5">
+            <img src="" alt="Nori">
+        </div>
+    </div>
+
+    <div class="row featurette">
+        <div class="col-md-5">
+            <img src="" alt="Bifur">
+        </div>
+        <div class="col-md-7">
+            <h3>Bifur</h3>
+            <p>
+
+            </p>
+        </div>
+    </div>
+    <div class="row featurette">
+        <div class="col-md-7">
+            <h3>Bofur</h3>
+            <p>
+
+            </p>
+        </div>
+        <div class="col-md-5">
+            <img src="" alt="Bofur">
+        </div>
+    </div>
+
+    <div class="row featurette">
+        <div class="col-md-5">
+            <img src="" alt="Bombur">
+        </div>
+        <div class="col-md-7">
+            <h3>Bombur</h3>
+            <p>
+
+            </p>
+        </div>
+    </div>
+
+    <div class="row featurette">
+        <div class="col-md-7">
+    
+            <h3>Gandalf</h3>
+            <p>
+
+            </p>
+        </div>
+        <div class="col-md-5">
+            <img src="" alt="Gandalf">
+        </div>
+    </div>
 {% endblock %}
