Adding all darf histories

--- a/templates/about.html
+++ b/templates/about.html
@@ -135,69 +135,53 @@
         <div class="col-md-7">
             <h3>Nori</h3>
             <p>
-
+                Nori was a Dwarf of Durin's Folk. He had a brother named Dori as well as a cousin named Ori,[1] and was
+                a remote kinsman of Thorin Oakenshield. His hood was purple, he played the flute, and he was very fond
+                of regular and plentiful meals like his Hobbit friend, Bilbo Baggins.
             </p>
         </div>
         <div class="col-md-5">
-            <img src="" alt="Nori">
+            <img src="https://static.wikia.nocookie.net/lotr/images/d/db/Nori-jedbrophy-p.jpg" alt="Nori">
         </div>
     </div>
 
     <div class="row featurette">
         <div class="col-md-5">
-            <img src="" alt="Bifur">
+            <img src="https://static.wikia.nocookie.net/lotr/images/b/b5/Bifur.jpg" alt="Bifur">
         </div>
         <div class="col-md-7">
             <h3>Bifur</h3>
             <p>
-
+                Bifur was a Dwarf of the late-Third Age. He is best known for being a companion to Bilbo Baggins and
+                Thorin Oakenshield on the quest to regain the Lonely Mountain, along with his cousins Bofur and Bombur.
             </p>
         </div>
     </div>
 
-    <div class="row featurette">
-        <div class="col-md-7">
-            <h3>Nori</h3>
-            <p>
-
-            </p>
-        </div>
-        <div class="col-md-5">
-            <img src="" alt="Nori">
-        </div>
-    </div>
-
-    <div class="row featurette">
-        <div class="col-md-5">
-            <img src="" alt="Bifur">
-        </div>
-        <div class="col-md-7">
-            <h3>Bifur</h3>
-            <p>
-
-            </p>
-        </div>
-    </div>
     <div class="row featurette">
         <div class="col-md-7">
             <h3>Bofur</h3>
             <p>
-
+                Bofur was a Dwarf of the late-Third Age. He is best known as a companion of Bilbo Baggins, Thorin
+                Oakenshield, and Gandalf on the quest to reclaim the Lonely Mountain from the dragon Smaug, along with
+                his brother Bombur and cousin Bifur.
             </p>
         </div>
         <div class="col-md-5">
-            <img src="" alt="Bofur">
+            <img src="https://static.wikia.nocookie.net/lotr/images/7/77/Bofur.jpg" alt="Bofur">
         </div>
     </div>
 
     <div class="row featurette">
         <div class="col-md-5">
-            <img src="" alt="Bombur">
+            <img src="https://static.wikia.nocookie.net/lotr/images/5/5f/Bombur-stephenhunter-p.jpg" alt="Bombur">
         </div>
         <div class="col-md-7">
             <h3>Bombur</h3>
             <p>
-
+                Bombur was a Dwarf who accompanied Thorin Oakenshield and Bilbo Baggins on their quest to the Lonely
+                Mountain as part of the company, alongside his brother Bofur and cousin Bifur. Bombur was noted as the
+                fattest Dwarf in the company.
             </p>
         </div>
     </div>
@@ -207,11 +191,15 @@
     
             <h3>Gandalf</h3>
             <p>
-
+                Gandalf (Norse; IPA: [gand:alf]) the Grey, later known as Gandalf the White, and originally named Olórin
+                (Quenya; IPA: [o&#39;lo:rin]), was an Istar (Wizard), dispatched to Middle-earth in the Third Age to combat
+                the threat of Sauron. He joined Thorin II Oakenshield and his company to reclaim the Lonely Mountain
+                from Smaug, helped form the Fellowship of the Ring to destroy the One Ring, and led the Free Peoples in
+                the final campaign of the War of the Ring.
             </p>
         </div>
         <div class="col-md-5">
-            <img src="" alt="Gandalf">
+            <img src="https://static.wikia.nocookie.net/lotr/images/e/e7/Gandalf_the_Grey.jpg" alt="Gandalf">
         </div>
     </div>
 {% endblock %}
