--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
-    <h2>About Page</h2>
 
+    <!-- {{ list_of_numbers }}  will display list
+    {% for number in list_of_numbers %} iterate trough the list
+        <p>{{ number }}</p>
+    {% endfor %} to make sure to stop our for-loop by using the 'endfor' statement -->
+
+    <!-- {{ company[1].name }} -- to operate in list, will show value -->
+
+    <h2>{{ page_title }}</h2>
+
+    
     <p>
         The formation of the group grew out of a meeting Gandalf had with Thorin in Bree which kindled Thorin's interest
         in recapturing his long lost family inheritance. (Thorin's grandfather had been the king of the Lonely Mountain
@@ -12,194 +21,41 @@
         planned to leave on other business, welcomed a fourteenth to fill into their party.
     </p>
 
-    <div class="row featurette">
-        <div class="col-md-7">
-            <h3>Thorin II Oakenshield</h3>
-            <p>
-                Thorin II was born in TA 2746 to Dwarf prince Thráin II in the city of the Lonely Mountain. Early in his
-                youth, he and the other Dwarves of the Lonely Mountain were forced to flee by the dragon Smaug in TA
-                2770. While in exile, he quickly grew to become a capable warrior. This was demonstrated when he
-                participated in the Battle of Azanulbizar in TA 2799. He fought with one of the Dwarven armies beneath
-                the East-gate of Moria. At some point in the fighting, his shield broke, and using an oaken tree branch
-                found on the ground as a shield, he gained the epithet "Oakenshield," which would remain with him even
-                in death.
-            </p>
-        </div>
-        <div class="col-md-5">
-            <img src="https://static.wikia.nocookie.net/lotr/images/3/3f/ThorinBIG.jpg" alt="thoring">
-        </div>
-    </div>
+    {% for member in company %} <!-- to loop in company list from company.json file -->
+        <!-- {{ loop.index }} -- to show index from to loop created above --> 
 
-    <div class="row featurette">
-        <div class="col-md-5">
-            <img src="https://static.wikia.nocookie.net/lotr/images/b/b4/The-Hobbit-Fili-and-Kili.jpg" alt="">
+        <div class="row featurette">
+            {% if loop.index % 2 != 0 %}<!-- adding if statment in currly bracket with procentage the as they are logic -->
+                <div class="col-md-7">
+                    <h3>{{ loop.index }}. {{ member.name }}</h3><!-- This is the way to add index number in front od each name from loop -->
+                    <p>
+                        {{ member.description }}
+                    </p>
+                </div>
+                <div class="col-md-5">
+                    <img src="{{ member.image_source}}" alt="thoring" class="featurette-image image-responsive">
+                </div>
+            
+            {% else %}<!-- else statment-->
+                <div class="col-md-5">
+                    <img src="{{ member.image_source}}" alt="thoring" class="featurette-image image-responsive">
+                </div>
+                <div class="col-md-7">
+                    <h3>{{ loop.index }}. {{ member.name }}</h3><!-- This is the way to add index number in front od each name from loop -->
+                    <p>
+                        {{ member.description }}
+                    </p>
+                </div>
+            {% endif %}<!-- closing if statment -->
+            
         </div>
-        <div class="col-md-7">
-            <h3>Fili and Kili</h3>
-            <p>
-                Fíli and Kíli were nephews of Thorin, who was the elder brother of their mother Dís. They were also nephews
-                of Frerin, grandsons of Thráin II, and great-grandsons of Thrór. Fíli's most distinguishing feature was his
-                long nose, the longest of any of the Dwarves in Thorin's company.
-            </p>
-        </div>
-    </div>
+        
+        {% if loop.index != loop.length %}
 
-    <div class="row featurette">
-        <div class="col-md-7">
-            <h3>Óin</h3>
-            <p>
-                Óin was the older brother of Glóin, cousin of Dwalin and Balin, and uncle of Gimli. Óin's uncle was
-                Fundin, the father of Balin and Dwalin. He usually wore a brown-hooded cloak when travelling. Óin fought
-                in the Battle of Azanulbizar along with Thorin Oakenshield, and in TA 2941 joined with Thorin and
-                Company on the quest to reclaim the Lonely Mountain wearing a brown hood.[2] Óin was one of the Dwarves
-                who bet that Bilbo would come along with them to reclaim the Lonely Mountain. Óin and his brother Glóin
-                were usually in charge of preparing the fire for the Company as they were the most skilled out of the
-                others. He fought in and survived the Battle of Five Armies, and later settled in the Lonely Mountain
-                with King Dáin II Ironfoot, along with many other Dwarves of The Company of Thorin.
-            </p>
-        </div>
-        <div class="col-md-5">
-            <img src="https://static.wikia.nocookie.net/lotr/images/e/e8/Oin.jpg" alt="Óin">
-        </div>
-    </div>
+            <hr class="featurette-divide">
 
-    <div class="row featurette">
-        <div class="col-md-5">
-            <img src="https://static.wikia.nocookie.net/lotr/images/f/fc/Gloin_2.jpg" alt="Gloin">
-        </div>
-        <div class="col-md-7">
-            <h3>Gloin</h3>
-            <p>
-                Glóin was born in TA 2783, after the dragon Smaug desolated Erebor. He was the younger child of Gróin
-                and younger brother of Óin.
-            </p>
-        </div>
-    </div>
+        {% endif %}<!-- closing if statment -->
 
-    <div class="row featurette">
-        <div class="col-md-7">
-            <h3>Balin</h3>
-            <p>
-                Balin was a Dwarf leader, the son of Fundin, and elder brother of Dwalin. He was one of the thirteen
-                Dwarves who accompanied Thorin II Oakenshield on the quest to regain the Lonely Mountain.
-            </p>
-        </div>
-        <div class="col-md-5">
-            <img src="https://static.wikia.nocookie.net/lotr/images/5/52/Balin.jpg" alt="Balin">
-        </div>
-    </div>
+    {% endfor %}
 
-    <div class="row featurette">
-        <div class="col-md-5">
-            <img src="https://static.wikia.nocookie.net/lotr/images/1/1c/Dwalin.jpg" alt="Dwalin">
-        </div>
-        <div class="col-md-7">
-            <h3>Dwalin</h3>
-            <p>
-                Dwalin was one of the Dwarves who traveled with Bilbo and Gandalf as a member of Thorin and Company on
-                the quest to regain the Lonely Mountain from the Dragon Smaug. He was the brother of Balin and the
-                youngest son of Fundin.
-            </p>
-        </div>
-    </div>
-
-    <div class="row featurette">
-        <div class="col-md-7">
-            <h3>Ori</h3>
-            <p>
-                Ori was a member of Thorin's Company of Dwarves and participated in the Quest of Erebor, as well as
-                fighting in and surviving the Battle of Five Armies. He, along with his cousins Dori and Nori,[2] were
-                remote kinsmen of Thorin II Oakenshield.
-            </p>
-        </div>
-        <div class="col-md-5">
-            <img src="https://static.wikia.nocookie.net/lotr/images/8/81/Ori.jpeg" alt="Ori">
-        </div>
-    </div>
-
-    <div class="row featurette">
-        <div class="col-md-5">
-            <img src="https://static.wikia.nocookie.net/lotr/images/8/89/Dori-markhadlow-p.jpg" alt="Dori">
-        </div>
-        <div class="col-md-7">
-            <h3>Dori</h3>
-            <p>
-                Dori was a Dwarf of Durin's Folk, who, along with his brother Nori and cousin Ori,[1] travelled with
-                Bilbo Baggins and Thorin Oakenshield as a member of Thorin's Company on the Quest for Erebor, to reclaim
-                the Lonely Mountain from the dragon Smaug.
-            </p>
-        </div>
-    </div>
-
-    <div class="row featurette">
-        <div class="col-md-7">
-            <h3>Nori</h3>
-            <p>
-                Nori was a Dwarf of Durin's Folk. He had a brother named Dori as well as a cousin named Ori,[1] and was
-                a remote kinsman of Thorin Oakenshield. His hood was purple, he played the flute, and he was very fond
-                of regular and plentiful meals like his Hobbit friend, Bilbo Baggins.
-            </p>
-        </div>
-        <div class="col-md-5">
-            <img src="https://static.wikia.nocookie.net/lotr/images/d/db/Nori-jedbrophy-p.jpg" alt="Nori">
-        </div>
-    </div>
-
-    <div class="row featurette">
-        <div class="col-md-5">
-            <img src="https://static.wikia.nocookie.net/lotr/images/b/b5/Bifur.jpg" alt="Bifur">
-        </div>
-        <div class="col-md-7">
-            <h3>Bifur</h3>
-            <p>
-                Bifur was a Dwarf of the late-Third Age. He is best known for being a companion to Bilbo Baggins and
-                Thorin Oakenshield on the quest to regain the Lonely Mountain, along with his cousins Bofur and Bombur.
-            </p>
-        </div>
-    </div>
-
-    <div class="row featurette">
-        <div class="col-md-7">
-            <h3>Bofur</h3>
-            <p>
-                Bofur was a Dwarf of the late-Third Age. He is best known as a companion of Bilbo Baggins, Thorin
-                Oakenshield, and Gandalf on the quest to reclaim the Lonely Mountain from the dragon Smaug, along with
-                his brother Bombur and cousin Bifur.
-            </p>
-        </div>
-        <div class="col-md-5">
-            <img src="https://static.wikia.nocookie.net/lotr/images/7/77/Bofur.jpg" alt="Bofur">
-        </div>
-    </div>
-
-    <div class="row featurette">
-        <div class="col-md-5">
-            <img src="https://static.wikia.nocookie.net/lotr/images/5/5f/Bombur-stephenhunter-p.jpg" alt="Bombur">
-        </div>
-        <div class="col-md-7">
-            <h3>Bombur</h3>
-            <p>
-                Bombur was a Dwarf who accompanied Thorin Oakenshield and Bilbo Baggins on their quest to the Lonely
-                Mountain as part of the company, alongside his brother Bofur and cousin Bifur. Bombur was noted as the
-                fattest Dwarf in the company.
-            </p>
-        </div>
-    </div>
-
-    <div class="row featurette">
-        <div class="col-md-7">
-    
-            <h3>Gandalf</h3>
-            <p>
-                Gandalf (Norse; IPA: [gand:alf]) the Grey, later known as Gandalf the White, and originally named Olórin
-                (Quenya; IPA: [o&#39;lo:rin]), was an Istar (Wizard), dispatched to Middle-earth in the Third Age to combat
-                the threat of Sauron. He joined Thorin II Oakenshield and his company to reclaim the Lonely Mountain
-                from Smaug, helped form the Fellowship of the Ring to destroy the One Ring, and led the Free Peoples in
-                the final campaign of the War of the Ring.
-            </p>
-        </div>
-        <div class="col-md-5">
-            <img src="https://static.wikia.nocookie.net/lotr/images/e/e7/Gandalf_the_Grey.jpg" alt="Gandalf">
-        </div>
-    </div>
 {% endblock %}
