--- a/templates/about.html
+++ b/templates/about.html
@@ -27,7 +27,7 @@
         <div class="row featurette">
             {% if loop.index % 2 != 0 %}<!-- adding if statment in currly bracket with procentage the as they are logic -->
                 <div class="col-md-7">
-                    <h3>{{ loop.index }}. {{ member.name }}</h3><!-- This is the way to add index number in front od each name from loop -->
+                    <h3><a href="/about/{{ member.url }}">{{ loop.index }}. {{ member.name }}</a></h3><!-- This is the way to add index number in front od each name from loop -->
                     <p>
                         {{ member.description }}
                     </p>
@@ -49,7 +49,7 @@
             {% endif %}<!-- closing if statment -->
             
         </div>
-        
+
         {% if loop.index != loop.length %}
 
             <hr class="featurette-divide">
